--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,8 @@ edition = "2024"
 
 [dependencies]
 bevy_math = {version = "0.15", default-features = false }
+
+
+[features]
+default = ["alloc"]
+alloc = []
