--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,14 @@ edition = "2024"
 
 [dependencies]
 bevy_math = {version = "0.15", default-features = false }
+rand = {version = "0.9.0", default-features = false }
+
+[dev-dependencies]
+bevy = "0.15"
 
 [features]
 default = ["alloc"]
-alloc = []
+alloc = ["rand/alloc"]
 
 
 [lints.clippy]
