--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,7 +151,6 @@ jobs:
           wayland: true
           xkb: true
       - name: Build and check doc
-        # See tools/ci/src/main.rs for the commands this runs
-        run: cargo run -p ci -- doc
+        run: cargo doc --workspace --all-features --no-deps --document-private-items --keep-going
         env:
           RUSTFLAGS: "-C debuginfo=0 -D warnings"
