--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,11 +145,11 @@ jobs:
             target/
           key: ${{ runner.os }}-check-doc-${{ hashFiles('**/Cargo.toml') }}
       - uses: dtolnay/rust-toolchain@stable
-      - name: Install Linux dependencies
-        uses: ./.github/actions/install-linux-deps
-        with:
-          wayland: true
-          xkb: true
+      # - name: Install Linux dependencies
+      #   uses: ./.github/actions/install-linux-deps
+      #   with:
+      #     wayland: true
+      #     xkb: true
       - name: Build and check doc
         run: cargo doc --workspace --all-features --no-deps --document-private-items --keep-going
         env:
