--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,17 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy_math = { version = "0.16.0-rc.3", default-features = true, features = ["curve"] }
+bevy_math = { version = "0.16.0-rc.3", default-features = false, features = ["curve"] }
 
 [dev-dependencies]
 bevy = "0.16.0-rc.3"
 
 [features]
+default = ["nostd-libm"]
+
+std = ["bevy_math/std"]
+libm = ["bevy_math/libm"]
+nostd-libm = ["bevy_math/nostd-libm"]
 
 [lints.clippy]
 doc_markdown = "warn"
