--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ std = ["bevy_math/std"]
 libm = ["bevy_math/libm"]
 nostd-libm = ["bevy_math/nostd-libm"]
 
+[profile.dev]
+opt-level = 3
+
 [lints.clippy]
 doc_markdown = "warn"
 manual_let_else = "warn"
