--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ nostd-libm = ["bevy_math/nostd-libm"]
 [profile.dev]
 opt-level = 3
 
+[profile.test]
+opt-level = 1
+
 [lints.clippy]
 doc_markdown = "warn"
 manual_let_else = "warn"
