--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,14 @@ bevy_math = { version = "0.16.0-rc.3", default-features = false, features = [
 ] }
 
 [dev-dependencies]
+# for examples
 bevy = "0.16.0-rc.3"
+
+# For benches
+criterion = "0.5"
+fastnoise-lite = "1.1"
+noise = "0.9"
+libnoise = "1.1"
 
 [features]
 default = ["nostd-libm"]
@@ -60,3 +67,8 @@ unused_qualifications = "warn"
 [[example]]
 name = "show_noise"
 path = "examples/show_noise.rs"
+
+[[bench]]
+name = "compare"
+path = "benches/compare/main.rs"
+harness = false
